# sugar-runner

./: .gitignore  Makefile-data.am  Makefile-lib.am  Makefile-scripts.am  Makefile.am  README.md  TODO  configure.ac  sr-run-test.in  sugar-runner-window.c  sugar-runner-window.h  sugar-runner.h  sugar-runner.in  tweak-xwrapper  version  xephyr-window.c  xinitrc  xinitrc.in
data/: sugar-runner.desktop
lib/: sugar-runner-window.c  sugar-runner-window.h  sugar-runner.c  sugar-runner.h
scripts/: sugar-runner.in  tweak-xwrapper  xephyr-window  xinitrc
